# neural-engineer

./: .gitignore  README.md  pyproject.toml
ai-agents/algo-trader/crypto-bot/: README.md  pyproject.toml
ai-agents/algo-trader/crypto-bot/docs/: coinmarketcap.md  coinmarketcap_examples.ipynb
ai-agents/algo-trader/crypto-bot/src/crypto_bot/: app.py  ccxt_market_data_tutorial.ipynb  crypto_cli.py  crypto_exchange.py  data_controller.py  enhanced_cached.py
ai-agents/algo-trader/crypto-bot/src/crypto_bot/templates/: index.html
example-projects/: firecrawl-1.ipynb
example-projects/crewai-medium-1/: .tmp_env  a.md  agents.py  main.py  requirements.txt  tasks.py  tools.py
example-projects/domain-check/: Dockerfile  README.md  pyproject.toml
example-projects/domain-check/docs/: analytics-posthog.md
example-projects/domain-check/src/domain_check/: domain_check.py  init_application.py  main.py  notification_handler.py  notification_scheduler.py  otp_handler.py  ssl_check.py
example-projects/domain-check/templates/: index.html
example-projects/email_analyzer/: README.md  pyproject.toml  requirements.txt
example-projects/email_analyzer/src/email_analyzer/: crew.py  main.py
example-projects/email_analyzer/src/email_analyzer/config/: agents.yaml  tasks.yaml
example-projects/email_analyzer/src/email_analyzer/tools/: email_tools.py  gmail_utils.py  gmail_utils_supabase.py  supabase_queue.py  supabase_queue_functions.sql
example-projects/firecrawll/: firecrawl-1.ipynb
example-projects/gemini-batch-api/: README.md  bulk_api_request.py  input.jsonl  job_processing.py
example-projects/mlflow-auth/: README.md  docker-compose.yaml  user_auth.py
example-projects/playwright/: README.md  main.py
example-projects/poetry-intro/: README.md
example-projects/python-downloaders/: FileDownloader.py  FileDownloader1.ipynb
example-projects/python-logging/: README.md  python_logging_notebook.ipynb
example-projects/redis/: redis-cache.ipynb  redis-cache.md
example-projects/redis/enhanced-cache/: redis-cache2.md  redis-cache3.ipynb
example-projects/request-caching-ratelmiting/: README.md  main.py  requirements.txt
example-projects/scripts/: aiohttp_downloader.ipynb  azure_asr1.ipynb  azure_asr2.ipynb  gemini_tts1.ipynb  wiki1.ipynb
example-projects/tor-1/: Dockerfile  README.md
example-projects/tor-1/app/: app.py  start.sh  torrc
example-projects/webrtc-text/: requirements.txt  webrtc-text-client.py  webrtc-text-server.py
example-projects/ytfinance/: README.md  main.py  requirements.txt
example_projects/domain-check/: .env.sample  Dockerfile  README.md
example_projects/domain-check/src/domain_check/: analytics.py  enhanced_cached.py  run_scheduler.py  ssl_check.py  ssl_checker.py
example_projects/domain-check/templates/: index_fixed.html
src/domain_check/: README.md  domain_check.py
wiki-ai/: pyproject.toml
wiki-ai/src/wiki_ai/: app.py  data_controller.py  github_analytics.py  github_repo_analytics.ipynb  visualization_service.py
wiki-ai/static/css/: style.css
wiki-ai/static/js/: main.js  repo-search.js
wiki-ai/templates/: base.html  index.html  repo.html
wiki-ai/tests/: test_github_analytics.py
